<resources>
    <string name="app_name">ColCab</string>
    <!--    Sign Up label -->
    <string name="username_signup"> Email address</string>
    <string name="password_signup"> Password</string>
    <string name="button_signup"> Sign Up</string>

    <!--    Screen Labels-->
    <string name="screen_log_ticket">Log Ticket</string>
    <string name="screen_open_ticket">Open Tickets</string>

    <!--    Nav bar String Resources-->
    <string name="nav_general">General</string>
    <string name="nav_home">Home</string>
    <string name="nav_log_ticket">Log Ticket</string>
    <string name="nav_open_tickets">Open Tickets</string>
    <string name="nav_closed_tickets">Closed Tickets</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!--    LogTicketScreen String Resources-->
    <!-- Labels of LogTicketScreen -->
    <string name="log_logged_lbl">LOGGED</string>
    <string name="log_customer_lbl">CUSTOMER</string>
    <string name="log_warranty_lbl">WARRANTY</string>
    <string name="log_serialNum_lbl">SERIAL No.</string>
    <string name="log_caseModel_lbl">CASE MODEL</string>
    <string name="log_caseDescription_lbl">CASE DESCRIPTION</string>
    <string name="log_requestedBy_lbl">REQUESTED BY</string>
    <string name="log_customerPO_lbl">Customer Purchase Order</string>
    <!-- Text Inputs of LogTicketScreen -->
    <string name="log_customer_Text">Store e.g Spar</string>
    <string name="log_serialNum_Text">Product Serial Number</string>
    <string name="log_caseModel_Text">Product Code Model</string>
    <string name="log_caseDescription_Text">Description of Problem</string>
    <string name="log_requestedBy_Text">Caller Full Name</string>
    <string name="log_customerPO_Text">Customer P.O.</string>
    <string name="btnLogTicket">Log Ticket</string>
    <!--   //End of LogTicketScreen String Resources-->

    //Home Page strings
    <string name="btnOpenTickets">Open Tickets</string>
    <string name="btnClosedTickets">Closed Tickets</string>
    <string name="btnScheduled">Scheduled</string>
    <string name="lblRootCause">ROOT CAUSE</string>

    //Closed Ticket Strings
    <string name="lblCategorise">CATEGORIES</string>
    <string name="lblStatus">Status</string>
    <string name="lblOpen">Open</string>
    <string name="lblScheduled">Scheduled</string>
    <string name="lblClosed">Closed</string>
    <string name="cbOpen">Open</string>

    <string name="cbScheduled">Scheduled</string>
    <string name="cbClosed">Closed</string>
    <string name="lblScheduleDate">Schedule Date</string>
    <string name="lblContractor">Contractor</string>

    <!--  fragment_ticket_admin String Resources-->
    <string name="dateDate">Date</string>
    <string name="txtContractorFullName">Full Name</string>
    <string name="txtContractorCompany">Company</string>
    <string name="txtContractorCountryRegion">Country/Region</string>
    <string name="txtContractorBusinessNumber">Business Number</string>
    <string name="txtContractorMobileNumber">Mobile Number</string>
    <string name="lblDate">Date</string>
    <string name="lblCustomer">Customer</string>
    <string name="lblWarranty">Warranty</string>
    <string name="btnAddContractor">Add Contractor</string>
    <string name="btnCancel">Cancel</string>
    //Edit open Tickets
    <string name="lblSerialNo">Serial No.</string>
    <string name="lblCaseModel">Case Model</string>
    <string name="lblCaseDesc">Case Description</string>
    <string name="lblRequestedBy">Requested By</string>
    <string name="lblCustomerPO">Customer PO</string>
    <string name="tfCustomer">Customer</string>
    <string name="tfSerialNo">Serial No.</string>
    <string name="tfCaseModel">Case Model</string>

    <string name="tfCaseDesc">Case Description</string>
    <string name="tfRequestedBy">Requested By</string>
    <string name="tfCustomerPO">Customer PO</string>
    <string name="btnSave">Save Changes</string>

    <!--    Edit Ticket Options Menu-->
    <string name="option_delete">Delete Ticket</string>
    <string name="option_close">Close Ticket</string>
    <string name="schedule_ticket">Schedule Ticket</string>
    <string name="select_date">Select Date</string>
    <string name="add_notes">Add Notes</string>
    <string name="type_here">Type here &#8230;</string>

    <!--        ARRAYS      -->

    <string name="failure_type">Failure Type</string>
    <string name="amount_due">Amount Due</string>
    //Closed Ticket
    <string name="category_type">Category Type</string>
    <string name="root_cause">Root Cause</string>
    <string name="client_feedback">Client Feedback</string>
    <string name="satisfaction_level">Satisfaction Level</string>
    <string name="save_as">Save As</string>
    <string name="close_ticket">Close Ticket</string>
    <string name="contractor_details">Contractor Details</string>
    <string name="full_name">Full Name</string>
    <string name="company">Company</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="business_number">Business Number</string>
    <string name="country_region">Country/Region</string>
    <string name="add_contractor">Add Contractor</string>
    <string name="scheduled_date">Scheduled Date</string>
    <string name="store">Store Name</string>
    <string name="description">Description</string>


    <string name="date_logged">Date Logged</string>

    <string name="date_closed">Date Closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="colcab_logo">ColCab Logo</string>
    // Placeholder Card View
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="warranty">
        <item>IN</item>
        <item>OUT</item>
        <item>UNKNOWN</item>
    </string-array>
    <string-array name="spnClosedTickets">
        <item>Category</item>
        <item>test data 1</item>
        <item>test data 2</item>
        <item>test data 3</item>
    </string-array>
    <string-array name="spnFailureTypes">
        <item>Choose Failure Types</item>
        <item>Failure Types 1</item>
        <item>Failure Types</item>
        <item>Failure Types</item>
    </string-array>

    // Content Description
    <string-array name="spnCategoryTypes">
        <item>Choose Category Types</item>
        <item>Category Type 1</item>
        <item>Category Type 2</item>
        <item>Category Type 3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="spnCATSs">
        <item>Satisfaction level</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    // Placeholder Card View
    <string name="store">Store Name</string>
    <string name="description">Description</string>
    <string name="date_logged">Date Logged</string>
    <string name="date_closed">Date Closed</string>

    // Content Description
    <string name="colcab_logo">ColCab Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
