<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/addContractorFragment"
            android:icon="@drawable/ic_log_ticket_24"
            android:title="@string/add_contractor" />
        <item
            android:id="@+id/businessIntelligenceFragment"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/statistics" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/nav_exit" />
    </group>
</menu>