<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketInfoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="411dp"
            android:layout_height="674dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="367dp"
                android:layout_height="28dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:text="@string/lblDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/lblCustomer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31"
                />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/lblWarranty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/lblSerialNo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/lblCaseModel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/lblCaseDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/lblRequestedBy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView36" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:text="@string/lblCustomerPO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <EditText
                android:id="@+id/tfCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tfCustomer"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView32"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/tfSerialNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tfSerialNo"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView34"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/tfCaseModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tfCaseModel"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/tfCaseDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tfCaseDesc"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView36"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/tfRequestedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tfRequestedBy"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView37"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/tfCustomerPO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tfCustomerPO"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView38"
                app:layout_constraintEnd_toEndOf="parent" />

            <Spinner
                android:id="@+id/spnWarranty"
                android:layout_width="213dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:entries="@array/log_status_Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tfCustomer" />

            <Button
                android:id="@+id/button"
                android:layout_width="362dp"
                android:layout_height="59dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/btnSave"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>