<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <Button
        android:id="@+id/btn_log_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogTicket" />

    <Button
        android:id="@+id/btn_open_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOpenTickets" />

    <Button
        android:id="@+id/btn_closed_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClosedTickets" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/site_logo" />

</LinearLayout>