<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/ticket_sch_cust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/ticket_sch_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/description"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/ticket_sch_logged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_logged"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/ticket_sch_sched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduled_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</androidx.cardview.widget.CardView>